--- a/css/styles.css
+++ b/css/styles.css
@@ -488,6 +488,32 @@ header .logo {
 .footer-container {
   display: flex;
   text-align: left;
+  align-items: baseline;
+  justify-content: space-between;
+}
+
+.footer-input-mail {
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+
+  background-color: transparent;
+  padding-left: 16px;
+
+  color: var(--dark-bg-text-color);
+  margin-right: 12px;
+}
+
+.footer-form-mail {
+  display: flex;
+}
+
+.footer-content {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .dark-bg-logo {
@@ -496,6 +522,71 @@ header .logo {
   padding-top: 0;
   padding-bottom: 0;
   margin-bottom: 20px;
+}
+
+.footer-navigation {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-social-title {
+  display: block;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--dark-bg-text-color);
+  margin-bottom: 20px;
+  margin-top: 12px;
+}
+
+.footer-social {
+  margin-left: 70px;
+}
+
+.footer-social .social-icons-link {
+  background: rgba(255, 255, 255, 0.1);
+}
+.footer-social .social-icons-link:hover,
+.footer-social .social-icons-link:focus {
+  background-color: var(--accent-color);
+}
+
+.footer-social .icon {
+  fill: var(--dark-bg-text-color);
+}
+
+.footer-button {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  display: flex;
+  justify-content: center;
+  width: 200px;
+  height: 50px;
+  align-items: center;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: 0px;
+  cursor: pointer;
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-button .icon {
+  fill: var(--dark-bg-text-color);
+  margin-left: 10px;
+}
+
+.footer-button:hover,
+.footer-button:focus {
+  background-color: #188ce8;
 }
 
 .address {
@@ -510,17 +601,8 @@ header .logo {
   margin-bottom: 9px;
 }
 
-.footer-content {
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-
 .map {
   color: var(--dark-bg-text-color);
-}
-
-.footer-navigation {
-  color: rgba(255, 255, 255, 0.6);
 }
 
 .current {
@@ -622,31 +704,9 @@ header .logo {
   padding-left: 24px;
 }
 
-.footer-social-title {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--dark-bg-text-color);
-  margin-bottom: 20px;
-  margin-top: 12px;
-}
-
-.footer-social {
-  margin-left: 70px;
-}
-
-.footer-social .social-icons-link {
-  background: rgba(255, 255, 255, 0.1);
-}
-.footer-social .social-icons-link:hover,
-.footer-social .social-icons-link:focus {
-  background-color: var(--accent-color);
-}
-
-.footer-social .icon {
-  fill: var(--dark-bg-text-color);
+.form-flex {
+  display: flex;
+  align-items: center;
 }
 
 .clients-section {
@@ -739,12 +799,13 @@ header .logo {
 
 .modal {
   position: absolute;
-  display: flex;
   min-height: 581px;
   min-width: 528px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
+
+  padding: 40px 40px 40px 40px;
 
   background-color: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -780,4 +841,65 @@ header .logo {
 .modal-button:focus {
   fill: var(--accent-color);
   border-color: var(--accent-color);
+}
+
+.modal-header {
+  display: block;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--title-color);
+  margin-bottom: 12px;
+}
+
+.form-label {
+  margin-right: auto;
+  font-size: 12px;
+  line-height: 14px;
+  /* identical to box height */
+
+  letter-spacing: 0.01em;
+
+  color: #757575;
+  margin-bottom: 4px;
+}
+
+.form-field {
+  position: relative;
+}
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-input {
+  position: relative;
+}
+
+.form-input .icon {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translateY(-50%);
+}
+
+textarea {
+  resize: none;
+}
+
+.modal-input {
+  position: relative;
+
+  width: 448px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+
+  border-radius: 4px;
+  padding-left: 42px;
 }
