--- a/css/styles.css
+++ b/css/styles.css
@@ -879,6 +879,17 @@ header .logo {
 
 .form-input {
   position: relative;
+  width: 100%;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input {
+  margin-bottom: 10px;
+}
+.form-input.text-area {
+  margin-bottom: 0px;
+  height: 122px;
+  margin-bottom: 20px;
 }
 
 .form-input .icon {
@@ -891,15 +902,77 @@ header .logo {
 
 textarea {
   resize: none;
+  padding: 12px 16px;
 }
 
 .modal-input {
   position: relative;
-
-  width: 448px;
+  width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
 
   border-radius: 4px;
   padding-left: 42px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:hover,
+.modal-input:focus,
+.modal-textarea:focus,
+.modal-textarea:hover,
+.form-input:hover,
+.form-input:focus {
+  fill: var(--accent-color);
+  border-color: var(--accent-color);
+  outline-color: var(--accent-color);
+}
+
+.form-input:focus-within {
+  fill: var(--accent-color);
+}
+
+.modal-textarea {
+  width: 100%;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-wrap {
+  position: relative;
+  font-size: 14px;
+  line-height: 24px;
+  /* identical to box height, or 171% */
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.checkbox-wrap .link {
+  font-size: 14px;
+  line-height: 1.7;
+  /* identical to box height, or 171% */
+  letter-spacing: 0.03em;
+  text-decoration-line: underline;
+  color: var(--accent-color);
+}
+.conditions-checkbox {
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.check-icon {
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  background-color: red;
+  margin-right: 7px;
 }
