--- a/css/styles.css
+++ b/css/styles.css
@@ -505,6 +505,9 @@ header .logo {
 
   color: var(--dark-bg-text-color);
   margin-right: 12px;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-form-mail {
@@ -874,7 +877,6 @@ header .logo {
 .modal-form {
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .form-input {
@@ -922,7 +924,9 @@ textarea {
 .modal-textarea:focus,
 .modal-textarea:hover,
 .form-input:hover,
-.form-input:focus {
+.form-input:focus,
+.footer-input-mail:hover,
+.footer-input-mail:focus {
   fill: var(--accent-color);
   border-color: var(--accent-color);
   outline-color: var(--accent-color);
@@ -943,26 +947,34 @@ textarea {
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.checkbox-wrap {
+.checkbox-label {
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  font-weight: normal;
   font-size: 14px;
   line-height: 24px;
-  /* identical to box height, or 171% */
   letter-spacing: 0.03em;
   color: #757575;
-
-  outline: 1px solid red;
+  margin-right: 12px;
 }
 
-.checkbox-wrap .link {
-  font-size: 14px;
-  line-height: 1.7;
-  /* identical to box height, or 171% */
-  letter-spacing: 0.03em;
-  text-decoration-line: underline;
-  color: var(--accent-color);
+.checkbox-icon {
+  position: absolute;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  border: 3px solid #212121;
+  border-radius: 3px;
+
+  left: 0px;
+  cursor: pointer;
+
+  margin-left: 12px;
 }
-.conditions-checkbox {
+
+.checkbox-input {
   position: absolute;
   top: 0;
   left: 0;
@@ -970,19 +982,49 @@ textarea {
   -moz-appearance: none;
   appearance: none;
 }
-
-.checkbox-wrap .icon {
-    position: absolute;
-    display: inline-block;
-    width: 12px;
-    height: 12px;
-    border: 2px solid orange;
-    border-radius: ;
-    top: 0px;
-    left: 0px;
-    transform: translatey(50%) translatex(-100%) translatex(-7px);
-    cursor: pointer;
-  }
+.checkbox-input:checked + .checkbox-icon {
+  background-color: var(--accent-color);
+  /* border-color: transparent; */
+  background-origin: content-box;
+  background-image: url('../images/icons/SVG/icon-check.svg');
+  background-size: contain;
+  border: 0px;
 }
-.check-icon {
+
+.checkbox-link {
+  margin-left: 5px;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  text-decoration-line: underline;
+  color: #2196f3;
+}
+
+.form-submit {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  display: flex;
+  justify-content: center;
+  width: 200px;
+  height: 50px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 30px;
+  align-items: center;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+  border-radius: 4px;
+  border: 0px;
+  cursor: pointer;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-submit:hover,
+.form-submit:focus {
+  background-color: #188ce8;
 }
